--- a/data/projects.json
+++ b/data/projects.json
@@ -4,9 +4,9 @@
     "user_id": "1759202559741",
     "description": "a",
     "status": "completed",
-    "deployed": false,
+    "deployed": true,
     "created_at": "2025-09-30T07:40:00.592Z",
-    "updated_at": "2025-09-30T07:40:03.597Z",
+    "updated_at": "2025-10-01T05:30:26.775Z",
     "name": "Landing Page #1759218000592",
     "landing_page_data": {
       "sitemap": [
@@ -27,16 +27,39 @@
       },
       "block_contents": {
         "content_001": {
-          "logo_src": "/logo.png",
-          "button": "Get Started"
+          "logo": {
+            "url": "#",
+            "src": "/logo.png",
+            "alt": "Logo image"
+          },
+          "navLinks": [
+            { "title": "Features", "url": "#" },
+            { "title": "Pricing", "url": "#" },
+            { "title": "About", "url": "#" }
+          ],
+          "buttons": [
+            {
+              "title": "Get Started",
+              "variant": "secondary",
+              "size": "sm"
+            }
+          ]
         },
         "content_002": {
-          "title": "Build Beautiful Landing Pages",
-          "desc": "Create stunning landing pages with AI assistance. Fast, beautiful, and conversion-optimized.",
-          "button1": "Get Started",
-          "button2": "Learn More"
+          "tagline": "AI-Powered",
+          "heading": "Build Beautiful Landing Pages",
+          "description": "Create stunning landing pages with AI assistance. Fast, beautiful, and conversion-optimized.",
+          "buttons": [
+            { "title": "Get Started", "variant": "secondary" },
+            { "title": "Learn More", "variant": "link", "size": "link" }
+          ],
+          "image": {
+            "src": "https://d22po4pjz3o32e.cloudfront.net/placeholder-image.svg",
+            "alt": "Landing page preview"
+          }
         }
       }
-    }
+    },
+    "subdomain": "project-1759218000592"
   }
 ]
