feat: transform component for edit mode

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "generate-meta": "npx tsx scripts/generate-meta.ts",
     "test-validation": "npx tsx scripts/test-validation.ts",
     "clean-data": "npx tsx scripts/clean-project-data.ts",
-    "prepare-shared-deps": "node scripts/prepare-shared-deps.js"
+    "prepare-shared-deps": "node scripts/prepare-shared-deps.js",
+    "transform-components": "npx tsx scripts/transform-components.ts"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
