--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
+    "test": "npm run test:transform",
+    "test:transform": "npx tsx --test scripts/__tests__/*.test.ts",
     "generate-meta": "npx tsx scripts/generate-meta.ts",
     "test-validation": "npx tsx scripts/test-validation.ts",
     "clean-data": "npx tsx scripts/clean-project-data.ts",
